2008-01-01  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-svn.el (vc-svn-parse-status): Set the 'unregisted property
	correctly.

	* vc.el (vc-dired-hook):  Speed tuning.  Replace a vc-backend call
	with vc-state.
	(vc-next-action): Fix vc-transfer-file call.

2007-12-31  Tom Tromey  <address@hidden>

        * emacs-lisp/elp.el (elp-results): Use header-line-format for
        header.  Move point to the start of the buffer.

2007-12-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-cvs.el (vc-cvs-parse-entry): Set the vc-backend property.

	* vc.el: State that dir-state is required to set the vc-state and
	vc-backend properties.

2007-12-31  Martin Rudalics  <rudalics@gmx.at>

	* man.el (Man-default-man-entry): Make this a defun.  Improve
	guessing mechanism and handling of section numbers.

2007-12-31  Richard Stallman  <rms@gnu.org>

	* faces.el (face-all-attributes): If FRAME is nil, return defaults.

2007-12-31  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-units.el (calc-convert-temperature): Ensure that units
	are on the result even when the result is zero.

2007-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-name-owner-changed-handler): Make the function
	resistent towards wrong parameters.
	(dbus-handle-event): Propagate D-Bus errors only in the debug case.

2007-12-30  Richard Stallman  <rms@gnu.org>

	* faces.el (face-all-attributes): New function.

	* faces.el (face-differs-from-default-p): Compute list of attr names
	from face-attribute-name-alist.

	* cus-edit.el (custom-face-set): Call `face-spec-set' with FOR-DEFFACE.
	(custom-face-save): Likewise.
	(custom-face-reset-saved, custom-face-reset-standard): Likewise.

	* cus-face.el (custom-declare-face): Per frame, use `face-spec-set-2'.
	(custom-theme-set-faces): Clear `face-override-spec' property.
	Call `face-spec-set' with FOR-DEFFACE.

	* custom.el (custom-theme-recalc-face):
	Simply call `face-spec-recalc'.

	* faces.el (face-spec-set): Third arg is now FOR-DEFFACE.