@@ -1,3 +1,8 @@
+2008-01-01  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-dir-state): Set the vc-backend property.  Do
+	not disable undo, with-temp-buffer does it by default.
+
 2008-01-01  Eric S. Raymond  <esr@snark.thyrsus.com>
 
 	* vc-svn.el (vc-svn-parse-status): Set the 'unregisted property
